tests/fail/function_same_parameters_name.tig
let
    function f(a: int, a: string, b: int, b: string) : int = 1
in
end
