tests/fail/function_same_parameters_name.err
Semantic Error: At least two parameters of the callable f defined at line 2 have the same name.
